--- a/.env
+++ b/.env
@@ -24,9 +24,9 @@ APP_SECRET=
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://root@127.0.0.1:3306/projetsymfonytrain2025?serverVersion=9.1.0&charset=utf8mb4" # Base de données à partir du server Wamp => utiliser celle la pour avancer sur le projet
+ DATABASE_URL="mysql://root@127.0.0.1:3306/projetsymfonytrain2025?serverVersion=9.1.0&charset=utf8mb4" # Base de données à partir du server Wamp => utiliser celle la pour avancer sur le projet
 # DATABASE_URL="mysql://Thomas:Tgv77310.@192.168.1.33:3306/projetsymfonytrain2025" # Base de données à partir du server distant ubuntu attention l'adresse ip peut changer. Dispo uniquement si je suis sur le meme reseau que le serveur distant.
- DATABASE_URL="mysql://Thomas:Tgv77310.@88.174.241.171:3306/projetsymfonytrain2025" # Base de données à partir du server distant ubuntu attention l'adresse ip peut changer. Dispo depuis n'importe quel reseau.
+# DATABASE_URL="mysql://Thomas:Tgv77310.@88.174.241.171:3306/projetsymfonytrain2025" # Base de données à partir du server distant ubuntu attention l'adresse ip peut changer. Dispo depuis n'importe quel reseau.
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
