--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,12 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+# Configuration spécifique aux tests
+APP_ENV=test
+APP_DEBUG=true
+
+DATABASE_URL="mysql://Thomas:Tgv77310.@88.174.241.171:3306/projetsymfonytrain2025_test" # BDD de test sur server distant
+# Désactiver l'envoi d'emails en test
+MAILER_DSN=null://null
+
+SYMFONY_DEPRETIONS8HELPERS=disabled
